[package]
name = "consensus"
version = "0.1.0"
authors = ["whfuyn <whfuyn@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overlord = "0.2.0-alpha.13"
lazy_static = "1.4.0"
bytes = "0.5.6"
async-trait = "0.1"
bls_amcl = "0.7.0"
hasher = { version = "0.1", features = ['hash-keccak'] }
rand = "0.7.3"
tonic = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
log = "0.4.11"
rlp = "0.4"
creep = "0.2"
thiserror = "1.0"
anyhow = "1.0"
log4rs = "0.13.0"
clap = { git = "https://github.com/clap-rs/clap/" }
git-version = "0.3.4"
serde = "1.0.114"
serde_derive = "1.0.114"
toml = "0.5"
